# google-cloud-datastore-odm

./: .editorconfig  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  example.py  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ci_cd.yml  docs.yml
docs/: getting_started.md  index.md  roadmap.md
docs/api/: client.md  model.md  properties.md  query.md  transaction.md
docs/guide/: migration.md  models.md  queries.md  routing.md  transactions.md  validation.md
examples/: 01_properties.py  02_validators.py  03_model_configuration_and_routing.py  04_keys_and_ids.py  05_model_introspection.py  06_access_and_serialization.py  06_dict_style_access.py  07_core_crud.py  08_lifecycle_hooks.py  09_queries_and_filtering.py  10_aggregators.py  11_transactions.py  example.py
src/google_cloud_datastore_odm/: __init__.py  client.py  fields.py  model.py  properties.py  query.py  transaction.py
tests/: conftest.py  test_assignment.py  test_cross_validation.py  test_fields.py  test_model.py  test_model_validation.py  test_properties.py  test_public_api.py  test_queries.py  test_transaction.py  test_transactions.py
