[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "google-cloud-datastore-odm"
version = "0.1.0"
description = "A modern, fully-typed Python ODM for Google Cloud Datastore."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "google-cloud-datastore>=2.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "genbadge[coverage]>=1.1.1",
    "zensical>=0.0.34",
    "mkdocstrings-python>=2.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "GOOGLE_CLOUD_PROJECT=google-cloud-datastore-odm-test",
    "DATASTORE_EMULATOR_HOST=localhost:10001"
]
log_format="%(asctime)s %(levelname)s %(message)s"
log_level="INFO"
log_date_format="%Y-%m-%d %H:%M:%S"
log_cli="true"
log_cli_format="%(asctime)s %(levelname)s %(message)s"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
addopts="-p no:warnings"

[tool.ruff]
line-length = 127
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 20
